<resources>
    <string name="app_name">Akasha</string>
    <string name="title_akasha_ai">Akasha AI</string>
    <string name="cd_hamburger">Hamburger</string>
    <string name="cd_logo">Akasha AI Logo</string>
    <string name="cd_user_avatar">User avatar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_new_account">Create new Account</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
</resources>